--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -72,7 +72,9 @@ homicide_clean =
   mutate(
     city_state = str_c(city, ", ", state),
     solved = if_else(disposition == "Closed by arrest", "yes", "no"),
-    victim_age = as.numeric(victim_age)
+    solved = factor(solved, levels = c("no", "yes")),
+    victim_age = if_else(victim_age == "Unknown",
+                         NA_real_, as.numeric(victim_age))
   ) |>
   filter(
     !city_state %in% c("Dallas, TX", "Phoenix, AZ", "Kansas City, MO", 
@@ -82,6 +84,41 @@ homicide_clean =
 ```
 
     ## Warning: There was 1 warning in `mutate()`.
-    ## ℹ In argument: `victim_age = as.numeric(victim_age)`.
-    ## Caused by warning:
+    ## ℹ In argument: `victim_age = if_else(victim_age == "Unknown", NA_real_,
+    ##   as.numeric(victim_age))`.
+    ## Caused by warning in `if_else()`:
     ## ! NAs introduced by coercion
+
+### baltimore and regression
+
+``` r
+library(broom)
+
+baltimore =
+  homicide_clean |>
+  filter(city_state == "Baltimore, MD")
+
+fit_baltimore =                 ## the output of glm
+  glm(
+    solved ~ victim_age + victim_sex + victim_race,
+    data = baltimore,
+    family = binomial
+  )
+
+tidy_baltimore =
+  tidy(
+    fit_baltimore,
+    exponentiate = TRUE,
+    conf.int    = TRUE
+  )
+
+tidy_baltimore
+```
+
+    ## # A tibble: 4 × 7
+    ##   term             estimate std.error statistic  p.value conf.low conf.high
+    ##   <chr>               <dbl>     <dbl>     <dbl>    <dbl>    <dbl>     <dbl>
+    ## 1 (Intercept)         1.36    0.171        1.81 7.04e- 2    0.976     1.91 
+    ## 2 victim_age          0.993   0.00332     -2.02 4.30e- 2    0.987     1.000
+    ## 3 victim_sexMale      0.426   0.138       -6.18 6.26e-10    0.324     0.558
+    ## 4 victim_raceWhite    2.32    0.175        4.82 1.45e- 6    1.65      3.28
