--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -122,3 +122,65 @@ tidy_baltimore
     ## 2 victim_age          0.993   0.00332     -2.02 4.30e- 2    0.987     1.000
     ## 3 victim_sexMale      0.426   0.138       -6.18 6.26e-10    0.324     0.558
     ## 4 victim_raceWhite    2.32    0.175        4.82 1.45e- 6    1.65      3.28
+
+### ORs and CIs for each city
+
+``` r
+or_city =
+  homicide_clean |>
+  group_by(city_state) |>
+  nest() |>
+  mutate(
+    fit = map(
+      data,
+      ~ glm(
+          solved ~ victim_age + victim_sex + victim_race,
+          data   = .x,
+          family = binomial
+        )
+    ),
+    tidy_res = map(
+      fit,
+      ~ tidy(.x, exponentiate = TRUE, conf.int = TRUE)
+    )
+  ) |>
+  select(city_state, tidy_res) |>
+  unnest(tidy_res) |>
+  filter(term == "victim_sexMale") |>
+  select(
+    city_state,
+    or_male_vs_female = estimate,
+    CI_low  = conf.low,
+    CI_high = conf.high,
+    p_value = p.value
+  ) |> 
+  ungroup()
+```
+
+    ## Warning: There were 43 warnings in `mutate()`.
+    ## The first warning was:
+    ## ℹ In argument: `tidy_res = map(fit, ~tidy(.x, exponentiate = TRUE, conf.int =
+    ##   TRUE))`.
+    ## ℹ In group 1: `city_state = "Albuquerque, NM"`.
+    ## Caused by warning:
+    ## ! glm.fit: fitted probabilities numerically 0 or 1 occurred
+    ## ℹ Run `dplyr::last_dplyr_warnings()` to see the 42 remaining warnings.
+
+``` r
+or_city
+```
+
+    ## # A tibble: 47 × 5
+    ##    city_state      or_male_vs_female CI_low CI_high   p_value
+    ##    <chr>                       <dbl>  <dbl>   <dbl>     <dbl>
+    ##  1 Albuquerque, NM             1.77   0.825   3.76  1.39 e- 1
+    ##  2 Atlanta, GA                 1.00   0.680   1.46  1.000e+ 0
+    ##  3 Baltimore, MD               0.426  0.324   0.558 6.26 e-10
+    ##  4 Baton Rouge, LA             0.381  0.204   0.684 1.65 e- 3
+    ##  5 Birmingham, AL              0.870  0.571   1.31  5.11 e- 1
+    ##  6 Boston, MA                  0.674  0.353   1.28  2.26 e- 1
+    ##  7 Buffalo, NY                 0.521  0.288   0.936 2.90 e- 2
+    ##  8 Charlotte, NC               0.884  0.551   1.39  6.00 e- 1
+    ##  9 Chicago, IL                 0.410  0.336   0.501 1.86 e-18
+    ## 10 Cincinnati, OH              0.400  0.231   0.667 6.49 e- 4
+    ## # ℹ 37 more rows
