plot for each city

--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -184,3 +184,46 @@ or_city
     ##  9 Chicago, IL                 0.410  0.336   0.501 1.86 e-18
     ## 10 Cincinnati, OH              0.400  0.231   0.667 6.49 e- 4
     ## # ℹ 37 more rows
+
+### plots
+
+``` r
+library(ggplot2)
+library(forcats)
+
+or_city |>
+  mutate(
+    city_state = fct_reorder(city_state, or_male_vs_female)
+  ) |> 
+  ggplot(aes(x = or_male_vs_female, y = city_state)) +
+  geom_point() +
+  geom_errorbar(aes(xmin = CI_low, xmax = CI_high), width = 0) +
+  geom_vline(xintercept = 1, linetype = 2) +
+  labs(
+    x = "Adjusted OR (male vs female)",
+    y = "City",
+    title = "Adjusted OR for solved homicides ~ gender"
+  )
+```
+
+<img src="p8105_hw6_cw3747_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
+
+Interpretation:
+
+The plot displays the adjusted odds ratio for a homicide being solved
+when the victim is male compared with female, controlling for victim age
+and race for each city.
+
+In most cities the point estimate is below 1, suggesting that cases with
+male victims generally have lower odds of being solved than cases with
+female victims, after adjustment for the other covariates.
+
+In several cities near the bottom of the plot (e.g., New York, Baton
+Rouge, Omaha), the 95% confidence intervals lie entirely below 1,
+indicating a statistically significant disadvantage for male victims.
+For many cities in the middle of the figure, the confidence intervals
+include 1, so we cannot rule out no difference between male and female
+victims. A few cities at the top have odds ratios above 1, but their
+intervals are wide, reflecting substantial uncertainty. Overall, the
+plot suggests both a tendency toward lower clearance for male victims
+and considerable variation across cities.
