--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -227,3 +227,78 @@ victims. A few cities at the top have odds ratios above 1, but their
 intervals are wide, reflecting substantial uncertainty. Overall, the
 plot suggests both a tendency toward lower clearance for male victims
 and considerable variation across cities.
+
+## Problem 2
+
+### data import
+
+``` r
+library(p8105.datasets)
+data("weather_df")
+
+janitor::clean_names(weather_df)
+```
+
+    ## # A tibble: 2,190 × 6
+    ##    name           id          date        prcp  tmax  tmin
+    ##    <chr>          <chr>       <date>     <dbl> <dbl> <dbl>
+    ##  1 CentralPark_NY USW00094728 2021-01-01   157   4.4   0.6
+    ##  2 CentralPark_NY USW00094728 2021-01-02    13  10.6   2.2
+    ##  3 CentralPark_NY USW00094728 2021-01-03    56   3.3   1.1
+    ##  4 CentralPark_NY USW00094728 2021-01-04     5   6.1   1.7
+    ##  5 CentralPark_NY USW00094728 2021-01-05     0   5.6   2.2
+    ##  6 CentralPark_NY USW00094728 2021-01-06     0   5     1.1
+    ##  7 CentralPark_NY USW00094728 2021-01-07     0   5    -1  
+    ##  8 CentralPark_NY USW00094728 2021-01-08     0   2.8  -2.7
+    ##  9 CentralPark_NY USW00094728 2021-01-09     0   2.8  -4.3
+    ## 10 CentralPark_NY USW00094728 2021-01-10     0   5    -1.6
+    ## # ℹ 2,180 more rows
+
+``` r
+weather_clean =
+  weather_df |>
+  select(tmax, tmin, prcp) |>
+  drop_na()
+```
+
+``` r
+library(modelr)
+```
+
+    ## 
+    ## Attaching package: 'modelr'
+
+    ## The following object is masked from 'package:broom':
+    ## 
+    ##     bootstrap
+
+``` r
+library(broom)
+
+set.seed(1)
+
+boot_results = 
+  weather_clean |>
+  modelr::bootstrap(n = 5000) |>
+  mutate(
+    model = map(
+      strap,
+      ~ lm(tmax ~ tmin + prcp, data = .x)
+    ),
+    model_sum = map(model, glance),
+    coef_tbl = map(model, tidy)
+  ) |>
+  mutate(
+    r2 = map_dbl(model_sum, "r.squared"),
+    beta_ratio = map_dbl(coef_tbl, ~ {
+      b1 = .x |>
+        filter(term == "tmin") |>
+        pull(estimate)
+      b2 = .x %>% 
+        filter(term == "prcp") |>
+        pull(estimate) 
+      b1 / b2
+    })
+  ) |>
+  select(.id, r2, beta_ratio)
+```
