CI for r square and ratio

--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -335,3 +335,28 @@ near $-200$ and a longer tail extending toward more negative values
 (approximately down to about $-400$). This suggests greater variability
 and asymmetry in the sampling distribution of the ratio of the two slope
 coefficients compared with $R^2$.
+
+### CI
+
+``` r
+boot_ci <- boot_results |>
+  summarise(
+    r2_low   = quantile(r2, 0.025),
+    r2_high  = quantile(r2, 0.975),
+    br_low   = quantile(beta_ratio, 0.025),
+    br_high  = quantile(beta_ratio, 0.975)
+  )
+
+boot_ci
+```
+
+    ## # A tibble: 1 × 4
+    ##   r2_low r2_high br_low br_high
+    ##    <dbl>   <dbl>  <dbl>   <dbl>
+    ## 1  0.934   0.947  -275.   -125.
+
+The 95% bootstrap confidence interval for $R^2$ is
+$\left[\,0.934,\ 0.947\right]$.
+
+The 95% bootstrap confidence interval for $\hat\beta_1 / \hat\beta_2$ is
+$\left[\,-274.79,\ -125.48\right]$.
