--- a/p8105_hw6_cw3747.Rmd
+++ b/p8105_hw6_cw3747.Rmd
@@ -225,3 +225,21 @@ of the variability in $tmax$.
 
 For the ratio $\hat\beta_1 / \hat\beta_2$, the bootstrap distribution is unimodal but clearly right--skewed on the negative scale, with a peak near $-200$ and a longer tail extending toward more negative values (approximately down to about $-400$). This suggests greater variability and asymmetry in the sampling  distribution of the ratio of the two slope coefficients compared with $R^2$. 
 
+
+### CI
+
+```{r}
+boot_ci <- boot_results |>
+  summarise(
+    r2_low   = quantile(r2, 0.025),
+    r2_high  = quantile(r2, 0.975),
+    br_low   = quantile(beta_ratio, 0.025),
+    br_high  = quantile(beta_ratio, 0.975)
+  )
+
+boot_ci
+```
+
+The 95\% bootstrap confidence interval for $R^2$ is $\left[\,`r round(boot_ci$r2_low, 3)`,\ `r round(boot_ci$r2_high, 3)`\right]$.
+
+The 95\% bootstrap confidence interval for $\hat\beta_1 / \hat\beta_2$ is $\left[\,`r round(boot_ci$br_low, 2)`,\ `r round(boot_ci$br_high, 2)`\right]$.
