--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -360,3 +360,108 @@ $\left[\,0.934,\ 0.947\right]$.
 
 The 95% bootstrap confidence interval for $\hat\beta_1 / \hat\beta_2$ is
 $\left[\,-274.79,\ -125.48\right]$.
+
+## Problem3
+
+### data import
+
+``` r
+bw = read.csv("./birthweight.csv") |>
+  janitor::clean_names()
+```
+
+``` r
+bw |> 
+  dplyr::glimpse()
+```
+
+    ## Rows: 4,342
+    ## Columns: 20
+    ## $ babysex  <int> 2, 1, 2, 1, 2, 1, 2, 2, 1, 1, 2, 1, 2, 1, 1, 2, 1, 2, 2, 2, 1…
+    ## $ bhead    <int> 34, 34, 36, 34, 34, 33, 33, 33, 36, 33, 35, 35, 35, 36, 35, 3…
+    ## $ blength  <int> 51, 48, 50, 52, 52, 52, 46, 49, 52, 50, 51, 51, 48, 53, 51, 4…
+    ## $ bwt      <int> 3629, 3062, 3345, 3062, 3374, 3374, 2523, 2778, 3515, 3459, 3…
+    ## $ delwt    <int> 177, 156, 148, 157, 156, 129, 126, 140, 146, 169, 130, 146, 1…
+    ## $ fincome  <int> 35, 65, 85, 55, 5, 55, 96, 5, 85, 75, 55, 55, 75, 75, 65, 75,…
+    ## $ frace    <int> 1, 2, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1…
+    ## $ gaweeks  <dbl> 39.9, 25.9, 39.9, 40.0, 41.6, 40.7, 40.3, 37.4, 40.3, 40.7, 4…
+    ## $ malform  <int> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+    ## $ menarche <int> 13, 14, 12, 14, 13, 12, 14, 12, 11, 12, 13, 12, 13, 11, 12, 1…
+    ## $ mheight  <int> 63, 65, 64, 64, 66, 66, 72, 62, 61, 64, 67, 62, 64, 68, 62, 6…
+    ## $ momage   <int> 36, 25, 29, 18, 20, 23, 29, 19, 13, 19, 23, 16, 28, 23, 21, 1…
+    ## $ mrace    <int> 1, 2, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1…
+    ## $ parity   <int> 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+    ## $ pnumlbw  <int> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+    ## $ pnumsga  <int> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+    ## $ ppbmi    <dbl> 26.27184, 21.34485, 23.56517, 21.84508, 21.02642, 18.60030, 1…
+    ## $ ppwt     <int> 148, 128, 137, 127, 130, 115, 105, 119, 105, 145, 110, 115, 1…
+    ## $ smoken   <dbl> 0.000, 0.000, 1.000, 10.000, 1.000, 0.000, 0.000, 0.000, 0.00…
+    ## $ wtgain   <int> 29, 28, 11, 30, 26, 14, 21, 21, 41, 24, 20, 31, 23, 21, 24, 2…
+
+``` r
+  summary(bw)
+```
+
+    ##     babysex          bhead          blength           bwt           delwt      
+    ##  Min.   :1.000   Min.   :21.00   Min.   :20.00   Min.   : 595   Min.   : 86.0  
+    ##  1st Qu.:1.000   1st Qu.:33.00   1st Qu.:48.00   1st Qu.:2807   1st Qu.:131.0  
+    ##  Median :1.000   Median :34.00   Median :50.00   Median :3132   Median :143.0  
+    ##  Mean   :1.486   Mean   :33.65   Mean   :49.75   Mean   :3114   Mean   :145.6  
+    ##  3rd Qu.:2.000   3rd Qu.:35.00   3rd Qu.:51.00   3rd Qu.:3459   3rd Qu.:157.0  
+    ##  Max.   :2.000   Max.   :41.00   Max.   :63.00   Max.   :4791   Max.   :334.0  
+    ##     fincome          frace          gaweeks         malform        
+    ##  Min.   : 0.00   Min.   :1.000   Min.   :17.70   Min.   :0.000000  
+    ##  1st Qu.:25.00   1st Qu.:1.000   1st Qu.:38.30   1st Qu.:0.000000  
+    ##  Median :35.00   Median :2.000   Median :39.90   Median :0.000000  
+    ##  Mean   :44.11   Mean   :1.655   Mean   :39.43   Mean   :0.003455  
+    ##  3rd Qu.:65.00   3rd Qu.:2.000   3rd Qu.:41.10   3rd Qu.:0.000000  
+    ##  Max.   :96.00   Max.   :8.000   Max.   :51.30   Max.   :1.000000  
+    ##     menarche        mheight          momage         mrace      
+    ##  Min.   : 0.00   Min.   :48.00   Min.   :12.0   Min.   :1.000  
+    ##  1st Qu.:12.00   1st Qu.:62.00   1st Qu.:18.0   1st Qu.:1.000  
+    ##  Median :12.00   Median :63.00   Median :20.0   Median :2.000  
+    ##  Mean   :12.51   Mean   :63.49   Mean   :20.3   Mean   :1.627  
+    ##  3rd Qu.:13.00   3rd Qu.:65.00   3rd Qu.:22.0   3rd Qu.:2.000  
+    ##  Max.   :19.00   Max.   :77.00   Max.   :44.0   Max.   :4.000  
+    ##      parity            pnumlbw     pnumsga      ppbmi            ppwt      
+    ##  Min.   :0.000000   Min.   :0   Min.   :0   Min.   :13.07   Min.   : 70.0  
+    ##  1st Qu.:0.000000   1st Qu.:0   1st Qu.:0   1st Qu.:19.53   1st Qu.:110.0  
+    ##  Median :0.000000   Median :0   Median :0   Median :21.03   Median :120.0  
+    ##  Mean   :0.002303   Mean   :0   Mean   :0   Mean   :21.57   Mean   :123.5  
+    ##  3rd Qu.:0.000000   3rd Qu.:0   3rd Qu.:0   3rd Qu.:22.91   3rd Qu.:134.0  
+    ##  Max.   :6.000000   Max.   :0   Max.   :0   Max.   :46.10   Max.   :287.0  
+    ##      smoken           wtgain      
+    ##  Min.   : 0.000   Min.   :-46.00  
+    ##  1st Qu.: 0.000   1st Qu.: 15.00  
+    ##  Median : 0.000   Median : 22.00  
+    ##  Mean   : 4.145   Mean   : 22.08  
+    ##  3rd Qu.: 5.000   3rd Qu.: 28.00  
+    ##  Max.   :60.000   Max.   : 89.00
+
+``` r
+  colSums(is.na(bw))
+```
+
+    ##  babysex    bhead  blength      bwt    delwt  fincome    frace  gaweeks 
+    ##        0        0        0        0        0        0        0        0 
+    ##  malform menarche  mheight   momage    mrace   parity  pnumlbw  pnumsga 
+    ##        0        0        0        0        0        0        0        0 
+    ##    ppbmi     ppwt   smoken   wtgain 
+    ##        0        0        0        0
+
+``` r
+bw =
+  bw |>
+  dplyr::mutate(
+    babysex = factor(babysex, levels = c(1, 2),
+                     labels = c("male", "female")),
+    frace  = factor(frace,  levels = c(1,2,3,4,8,9),
+                    labels = c("white","black","asian",
+                               "puerto_rican","other","unknown")),
+    mrace  = factor(mrace,  levels = c(1,2,3,4,8),
+                    labels = c("white","black","asian",
+                               "puerto_rican","other")),
+    malform = factor(malform, levels = c(0,1),
+                     labels = c("absent","present"))
+  )
+```
