--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -465,3 +465,83 @@ bw =
                      labels = c("absent","present"))
   )
 ```
+
+### MLR
+
+``` r
+mlr_bw =
+  lm(
+    bwt ~ gaweeks + ppbmi + wtgain + smoken + babysex + mrace + parity + 
+      pnumlbw + pnumsga, 
+    data = bw
+  )
+
+mlr_bw
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ gaweeks + ppbmi + wtgain + smoken + babysex + 
+    ##     mrace + parity + pnumlbw + pnumsga, data = bw)
+    ## 
+    ## Coefficients:
+    ##       (Intercept)            gaweeks              ppbmi             wtgain  
+    ##           553.629             54.388             20.057              9.764  
+    ##            smoken      babysexfemale         mraceblack         mraceasian  
+    ##           -11.546            -85.688           -297.536           -126.607  
+    ## mracepuerto_rican             parity            pnumlbw            pnumsga  
+    ##          -186.311            102.541                 NA                 NA
+
+``` r
+summary(mlr_bw)
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ gaweeks + ppbmi + wtgain + smoken + babysex + 
+    ##     mrace + parity + pnumlbw + pnumsga, data = bw)
+    ## 
+    ## Residuals:
+    ##      Min       1Q   Median       3Q      Max 
+    ## -1657.93  -263.74     5.69   274.12  1653.19 
+    ## 
+    ## Coefficients: (2 not defined because of singularities)
+    ##                    Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept)        553.6295    94.1741   5.879 4.44e-09 ***
+    ## gaweeks             54.3884     2.1281  25.557  < 2e-16 ***
+    ## ppbmi               20.0570     2.0669   9.704  < 2e-16 ***
+    ## wtgain               9.7640     0.6045  16.153  < 2e-16 ***
+    ## smoken             -11.5462     0.9067 -12.735  < 2e-16 ***
+    ## babysexfemale      -85.6883    13.0104  -6.586 5.05e-11 ***
+    ## mraceblack        -297.5360    14.1546 -21.020  < 2e-16 ***
+    ## mraceasian        -126.6070    66.2419  -1.911    0.056 .  
+    ## mracepuerto_rican -186.3110    29.1762  -6.386 1.89e-10 ***
+    ## parity             102.5407    63.2636   1.621    0.105    
+    ## pnumlbw                  NA         NA      NA       NA    
+    ## pnumsga                  NA         NA      NA       NA    
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 427.3 on 4332 degrees of freedom
+    ## Multiple R-squared:  0.3053, Adjusted R-squared:  0.3038 
+    ## F-statistic: 211.5 on 9 and 4332 DF,  p-value: < 2.2e-16
+
+$$
+\widehat{\text{bwt}} =
+553.6 + 54.4\,\text{gaweeks} + 20.1\,\text{ppbmi} + 9.8\,\text{wtgain} - 11.5\,\text{smoken} - 85.7\,\mathbb{I}(\text{babysex}=\text{female}) - 297.5\,\mathbb{I}(\text{mrace}=\text{black}) - 126.6\,\mathbb{I}(\text{mrace}=\text{asian}) - 186.3\,\mathbb{I}(\text{mrace}=\text{puerto\_rican}) + 102.5\,\text{parity}
+$$
+
+We fitted a multiple linear regression model with birthweight in grams
+as the outcome and gestational age, maternal pre-pregnancy BMI, maternal
+weight gain during pregnancy, daily number of cigarettes smoked, infant
+sex, maternal race, and parity as predictors.
+
+After adjustment for all other variables in the model, birthweight is
+positively associated with gestational age, maternal BMI, weight gain,
+and parity, and negatively associated with cigarette smoking. Infants
+born to mothers who are Black or Puerto Rican tend to have lower
+birthweights compared with those born to White mothers, and female
+infants tend to weigh less than male infants. Overall, the model
+captures biologically plausible relationships between fetal growth and
+maternal characteristics, smoking behavior, and sociodemographic
+factors.
