--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -545,3 +545,52 @@ infants tend to weigh less than male infants. Overall, the model
 captures biologically plausible relationships between fetal growth and
 maternal characteristics, smoking behavior, and sociodemographic
 factors.
+
+### plots
+
+``` r
+bw_resid =
+  bw |>
+  modelr::add_predictions(mlr_bw) |>
+  modelr::add_residuals(mlr_bw)
+
+bw_resid |>
+  ggplot(aes(x = pred, y = resid)) + 
+  geom_point(alpha = 0.3) + 
+  geom_hline(yintercept = 0, 
+             linetype = "dashed") +
+  geom_smooth(se = FALSE) +
+  labs(
+    x = "Fitted values", 
+    y = "Residuals",
+    title = "Residuals vs fitted values for birthweight model"
+  )
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
+
+<img src="p8105_hw6_cw3747_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+
+Process
+
+I used multiple linear regression with birthweight in grams as the
+outcome. After cleaning the data and turning sex and race into factor
+variables, I chose predictors that are biologically related to fetal
+growth: gestational age, maternal pre-pregnancy BMI, weight gain during
+pregnancy, number of cigarettes smoked per day, infant sex, maternal
+race, and parity. I first fit a full model including these variables
+plus indicators for previous low-birthweight and SGA infants. Because
+the previous low-birthweight/SGA variables were perfectly collinear with
+the others, R dropped them due to singularities, and the remaining
+predictors form the final model used for all diagnostics.
+
+Interpretation
+
+In the residuals versus fitted values plot, the points are roughly
+centered around zero across the range of fitted birthweights, and the
+spread of residuals is fairly constant, so the mean-zero and
+constant-variance assumptions look reasonable. The smooth curve stays
+close to zero in the middle but bends slightly downward at the very low
+and very high fitted values, suggesting some mild lack of fit at the
+extremes; overall, the linear model describes the bulk of the data
+reasonably well.
