--- a/p8105_hw6_cw3747.Rmd
+++ b/p8105_hw6_cw3747.Rmd
@@ -302,4 +302,33 @@ We fitted a multiple linear regression model with birthweight in grams as the ou
 
 After adjustment for all other variables in the model, birthweight is positively associated with gestational age, maternal BMI, weight gain, and parity, and negatively associated with cigarette smoking. Infants born to mothers who are Black or Puerto Rican tend to have lower birthweights compared with those born to White mothers, and female infants tend to weigh less than male infants. Overall, the model captures biologically plausible relationships between fetal growth and maternal characteristics, smoking behavior, and sociodemographic factors.
 
+### plots
+
+```{r}
+bw_resid =
+  bw |>
+  modelr::add_predictions(mlr_bw) |>
+  modelr::add_residuals(mlr_bw)
+
+bw_resid |>
+  ggplot(aes(x = pred, y = resid)) + 
+  geom_point(alpha = 0.3) + 
+  geom_hline(yintercept = 0, 
+             linetype = "dashed") +
+  geom_smooth(se = FALSE) +
+  labs(
+    x = "Fitted values", 
+    y = "Residuals",
+    title = "Residuals vs fitted values for birthweight model"
+  )
+```
+
+Process
+
+I used multiple linear regression with birthweight in grams as the outcome. After cleaning the data and turning sex and race into factor variables, I chose predictors that are biologically related to fetal growth: gestational age, maternal pre-pregnancy BMI, weight gain during pregnancy, number of cigarettes smoked per day, infant sex, maternal race, and parity. I first fit a full model including these variables plus indicators for previous low-birthweight and SGA infants. Because the previous low-birthweight/SGA variables were perfectly collinear with the others, R dropped them due to singularities, and the remaining predictors form the final model used for all diagnostics.
+
+Interpretation
+
+In the residuals versus fitted values plot, the points are roughly centered around zero across the range of fitted birthweights, and the spread of residuals is fairly constant, so the mean-zero and constant-variance assumptions look reasonable. The smooth curve stays close to zero in the middle but bends slightly downward at the very low and very high fitted values, suggesting some mild lack of fit at the extremes; overall, the linear model describes the bulk of the data reasonably well.
+
 
