--- a/p8105_hw6_cw3747.md
+++ b/p8105_hw6_cw3747.md
@@ -594,3 +594,70 @@ close to zero in the middle but bends slightly downward at the very low
 and very high fitted values, suggesting some mild lack of fit at the
 extremes; overall, the linear model describes the bulk of the data
 reasonably well.
+
+### compare model
+
+``` r
+mlr_whole = bwt ~ gaweeks + ppbmi + wtgain + smoken + babysex + mrace + parity
+
+mlr_len_ga = bwt ~ blength + gaweeks
+
+mlr_int = bwt ~ bhead * blength * babysex
+```
+
+``` r
+set.seed(1)
+
+cv_df =
+  modelr::crossv_mc(bw, n = 100) |>
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test,  as_tibble),
+    mlr_whole  = map(train, ~ lm(mlr_whole,  data = .x)),
+    mlr_len_ga = map(train, ~ lm(mlr_len_ga, data = .x)),
+    mlr_int = map(train, ~ lm(mlr_int, data = .x)),
+    mspe_whole = map2_dbl(mlr_whole, test, ~ mean((.y$bwt - predict(.x, .y))^2)),
+    mspe_len_ga = map2_dbl(mlr_len_ga, test, ~ mean((.y$bwt - predict(.x, .y))^2)),
+    mspe_int = map2_dbl(mlr_int, test, ~ mean((.y$bwt - predict(.x, .y))^2))
+  )
+```
+
+    ## Warning: There was 1 warning in `mutate()`.
+    ## ℹ In argument: `mspe_whole = map2_dbl(mlr_whole, test, ~mean((.y$bwt -
+    ##   predict(.x, .y))^2))`.
+    ## Caused by warning in `predict.lm()`:
+    ## ! prediction from rank-deficient fit; attr(*, "non-estim") has doubtful cases
+
+``` r
+cv_df |>
+  summarise(
+    mean_mspe_whole  = mean(mspe_whole),
+    mean_mspe_len_ga = mean(mspe_len_ga),
+    mean_mspe_int    = mean(mspe_int)
+  )
+```
+
+    ## # A tibble: 1 × 3
+    ##   mean_mspe_whole mean_mspe_len_ga mean_mspe_int
+    ##             <dbl>            <dbl>         <dbl>
+    ## 1         184293.          110569.        83376.
+
+Interpretation
+
+Across 100 Monte Carlo splits, the model with head circumference,
+length, sex, and their interactions had the lowest mean cross-validated
+prediction error, followed by the simple model with length and
+gestational age. My proposed model based on maternal characteristics had
+the largest MSPE, indicating worse predictive performance, although it
+may still be useful for understanding associations with maternal
+factors.
+
+The interaction model probably does best because it uses variables that
+directly describe the baby’s size at birth (head circumference and
+length), and it allows the relationship between these measures and
+birthweight to differ by sex. The interaction terms make the model more
+flexible, so it can fit different “patterns” of birthweight for boys and
+girls instead of forcing a single straight line for everyone. Since we
+evaluate performance by cross-validated MSPE rather than in-sample
+error, this better fit seems to carry over to new data rather than just
+overfitting the training set.
